sw/qa/extras/ooxmlexport/ooxmlexport16.cxx
@@ -73,6 +73,17 @@ protected:
     }
 };
 
+DECLARE_OOXMLEXPORT_EXPORTONLY_TEST(testTdf143860NonPrimitiveCustomShape,
+                                    "tdf143860_NonPrimitiveCustomShape.odt")
+{
+    // The document has a custom shape of type non-primitive without handles. Make sure that the shape
+    // is not exported with preset but with custom geometry.
+    xmlDocUniquePtr pXmlDocument = parseExport("word/document.xml");
+    CPPUNIT_ASSERT(pXmlDocument);
+    assertXPath(pXmlDocument, "//a:prstGeom", 0);
+    assertXPath(pXmlDocument, "//a:custGeom", 1);
+}
+
 DECLARE_OOXMLEXPORT_EXPORTONLY_TEST(testWrapPolygonCurve, "tdf136386_WrapPolygonCurve.odt")
 {
     // Document has a curve with contour wrap and 'outside only'. Error was, that type 'square' was
